--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </p>
             <ul class="ev-bullet-list">
               <li>No registration fee surprises</li>
-              <li>Focused, small online groups for interaction</li>
+              <li>Focused, lively online lessons with interactions</li>
               <li>Materials and homework included</li>
             </ul>
             <p>
