--- a/index.html
+++ b/index.html
@@ -73,7 +73,27 @@
       </section>
 
       <!-- WHY EDVENGERS -->
-      <section id="why" class="ev-section">
+<section class="ev-section-stats">
+  <div class="ev-container stat-grid">
+    <div class="stat-item">
+      <div class="stat-number">100%</div>
+      <div class="stat-label">MOE Aligned</div>
+    </div>
+    <div class="stat-item">
+      <div class="stat-number">24/7</div>
+      <div class="stat-label">Portal Access</div>
+    </div>
+    <div class="stat-item">
+      <div class="stat-number">Ex-MOE</div>
+      <div class="stat-label">Teachers</div>
+    </div>
+    <div class="stat-item">
+      <div class="stat-number">Live</div>
+      <div class="stat-label">Interactions</div>
+    </div>
+  </div>
+</section>      
+<section id="why" class="ev-section">
         <div class="ev-container ev-two-column">
           <div class="ev-column">
             <h2>Why Edvengers?</h2>
@@ -184,7 +204,27 @@
       </section>
 
       <!-- CLASSES & SCHEDULE -->
-      <section id="classes" class="ev-section ev-section-alt">
+<section class="ev-section ev-section-alt">
+  <div class="ev-container">
+    <div class="ev-section-header">
+      <h2>Hall of Fame</h2>
+      <p>Real results from real heroes.</p>
+    </div>
+
+    <div class="fame-grid">
+      <div class="fame-item"><img src="images/pic1.jpg" alt="Success Story 1" /></div>
+      <div class="fame-item"><img src="images/pic2.jpg" alt="Success Story 2" /></div>
+      <div class="fame-item"><img src="images/pic3.jpg" alt="Success Story 3" /></div>
+      <div class="fame-item"><img src="images/pic4.jpg" alt="Success Story 4" /></div>
+      <div class="fame-item"><img src="images/pic5.jpg" alt="Success Story 5" /></div>
+    </div>
+    
+    <p class="ev-helper-text" style="text-align:center; margin-top:1.5rem;">
+      We have helped students improve their grades and confidence. Will yours be next?
+    </p>
+  </div>
+</section>      
+<section id="classes" class="ev-section ev-section-alt">
         <div class="ev-container">
           <div class="ev-section-header">
             <h2>Classes &amp; Schedule</h2>
