--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              Register Interest (Google Form)
+              Register Interest
             </a>
           </div>
 
