--- a/teacher.html
+++ b/teacher.html
@@ -285,33 +285,34 @@
                   </div>
 
                   <div class="form-field">
-                    <label>Links (up to 5)</label>
-                    <input
-                      id="homework-link-1"
-                      type="url"
-                      placeholder="Main link (required)"
-                      required
-                    />
-                    <input
-                      id="homework-link-2"
-                      type="url"
-                      placeholder="Additional link 2 (optional)"
-                    />
-                    <input
-                      id="homework-link-3"
-                      type="url"
-                      placeholder="Additional link 3 (optional)"
-                    />
-                    <input
-                      id="homework-link-4"
-                      type="url"
-                      placeholder="Additional link 4 (optional)"
-                    />
-                    <input
-                      id="homework-link-5"
-                      type="url"
-                      placeholder="Additional link 5 (optional)"
-                    />
+                    <label>Homework Links &amp; Names</label>
+                    <p class="helper-text" style="margin-bottom:0.5rem;">
+                      Name (e.g. "Worksheet A") — URL (e.g. Google Drive link)
+                    </p>
+
+                    <div class="link-row" style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                      <input id="homework-name-1" type="text" placeholder="Link 1 Name" style="width:40%;" />
+                      <input id="homework-link-1" type="url" placeholder="https://..." style="flex:1;" required />
+                    </div>
+
+                    <div class="link-row" style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                      <input id="homework-name-2" type="text" placeholder="Link 2 Name" style="width:40%;" />
+                      <input id="homework-link-2" type="url" placeholder="https://..." style="flex:1;" />
+                    </div>
+
+                    <div class="link-row" style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                      <input id="homework-name-3" type="text" placeholder="Link 3 Name" style="width:40%;" />
+                      <input id="homework-link-3" type="url" placeholder="https://..." style="flex:1;" />
+                    </div>
+                  
+<div class="link-row" style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                      <input id="homework-name-4" type="text" placeholder="Link 4 Name" style="width:40%;" />
+                      <input id="homework-link-4" type="url" placeholder="https://..." style="flex:1;" />
+                    </div>
+<div class="link-row" style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                      <input id="homework-name-5" type="text" placeholder="Link 5 Name" style="width:40%;" />
+                      <input id="homework-link-5" type="url" placeholder="https://..." style="flex:1;" />
+                    </div>
                   </div>
 
                   <div class="dashboard-grid">
