--- a/student-hub.html
+++ b/student-hub.html
@@ -23,7 +23,6 @@
     </header>
 
     <main>
-      <!-- LOGIN -->
       <section id="student-login-section">
         <div class="ev-container" style="padding: 2.5rem 0 3rem;">
           <h1>Student Login</h1>
@@ -54,7 +53,7 @@
               </div>
 
               <p class="helper-text">
-                First time login / after reset use default password:
+                First time login? Use the default password:
                 <strong>heroes2026</strong>
               </p>
 
@@ -72,8 +71,7 @@
         </div>
       </section>
 
-      <!-- HUB -->
-<section id="student-password-section" style="display:none;">
+      <section id="student-password-section" style="display:none;">
         <div class="ev-container" style="padding: 2.5rem 0 3rem;">
           <h1>One Last Step!</h1>
           <p class="ev-helper-text">
@@ -98,8 +96,9 @@
             </form>
           </div>
         </div>
-      </section>      
-<section id="student-hub-section" style="display:none;">
+      </section>
+
+      <section id="student-hub-section" style="display:none;">
         <div class="ev-container" style="padding:2.5rem 0 3.5rem;">
           <h1>
             Hi <span id="student-name-display">hero</span>, welcome to your Student Hub!
@@ -108,7 +107,6 @@
             Join lessons, check announcements, see homework and chat with your teachers.
           </p>
 
-          <!-- TOP: profile + zoom -->
           <div class="dashboard-grid">
             <div class="card">
               <div class="card-header">Your Details</div>
@@ -130,6 +128,7 @@
                 Tap the button a few minutes before your class. Use your real name in
                 Zoom.
               </p>
+              
               <a
                 href="https://us06web.zoom.us/j/9900999009?pwd=4p3nEzSTnskpvfcIdaQrgRm7yfhrng.1"
                 target="_blank"
@@ -137,66 +136,61 @@
               >
                 Join Zoom Lesson
               </a>
+              
               <p class="helper-text">
                 Prepare your notebook, pen and worksheets before joining.
               </p>
             </div>
           </div>
 
-          <!-- ANNOUNCEMENTS + HOMEWORK -->
-<div class="dashboard-grid">
+          <div class="dashboard-grid">
 
-  <!-- 📢 Announcements -->
-  <div class="card">
-    <div class="card-header">Announcements</div>
-    <p class="helper-text">
-      Important updates from your teachers. Newest first.
-    </p>
+            <div class="card">
+              <div class="card-header">Announcements</div>
+              <p class="helper-text">
+                Important updates from your teachers. Newest first.
+              </p>
 
-    <div id="student-announcements"></div>
+              <div id="student-announcements"></div>
 
-    <!-- Toggle & count -->
-    <div class="student-section-footer">
-      <button
-        id="student-ann-toggle"
-        type="button"
-        class="btn btn-ghost btn-small"
-        style="display:none;"
-      >
-        Show older announcements
-      </button>
+              <div class="student-section-footer">
+                <button
+                  id="student-ann-toggle"
+                  type="button"
+                  class="btn btn-ghost btn-small"
+                  style="display:none;"
+                >
+                  Show older announcements
+                </button>
 
-      <span id="student-ann-count" class="helper-text"></span>
-    </div>
-  </div>
+                <span id="student-ann-count" class="helper-text"></span>
+              </div>
+            </div>
 
-  <!-- 📝 Homework -->
-  <div class="card">
-    <div class="card-header">Homework &amp; Links</div>
-    <p class="helper-text">
-      Homework for your level & subjects. Newest first.
-    </p>
+            <div class="card">
+              <div class="card-header">Homework &amp; Links</div>
+              <p class="helper-text">
+                Homework for your level & subjects. Newest first.
+              </p>
 
-    <div id="student-homework-list"></div>
+              <div id="student-homework-list"></div>
 
-    <!-- Toggle & count -->
-    <div class="student-section-footer">
-      <button
-        id="student-hw-toggle"
-        type="button"
-        class="btn btn-ghost btn-small"
-        style="display:none;"
-      >
-        Show older homework
-      </button>
+              <div class="student-section-footer">
+                <button
+                  id="student-hw-toggle"
+                  type="button"
+                  class="btn btn-ghost btn-small"
+                  style="display:none;"
+                >
+                  Show older homework
+                </button>
 
-      <span id="student-hw-count" class="helper-text"></span>
-    </div>
-  </div>
+                <span id="student-hw-count" class="helper-text"></span>
+              </div>
+            </div>
 
-</div>
+          </div>
 
-          <!-- CHAT -->
           <section class="dashboard-card">
             <div class="card-header">Chat with Your Teacher</div>
             <p class="card-subtitle">
