--- a/teacher.html
+++ b/teacher.html
@@ -220,6 +220,12 @@
                       required
                     ></textarea>
                   </div>
+<div class="form-field" style="display:flex; align-items:center; gap:0.5rem; margin-bottom:1rem;">
+                    <input type="checkbox" id="announcement-pinned" style="width:auto; margin:0; cursor:pointer;" />
+                    <label for="announcement-pinned" style="margin:0; cursor:pointer; font-weight:600; color:var(--ev-accent);">
+                      Pin this announcement to top 📌
+                    </label>
+                  </div>
                   <div class="form-field">
                     <label for="announcement-level">Level</label>
 <select id="announcement-level" class="input">
