--- a/student-hub.html
+++ b/student-hub.html
@@ -5,6 +5,15 @@
     <title>Edvengers Student Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
+    
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Edvengers">
+    <link rel="apple-touch-icon" href="images/app-icon.png">
+    
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#020617">
+    <link rel="manifest" href="manifest.json">
   </head>
 
   <body class="portal-body">
